--- a/custom.css
+++ b/custom.css
@@ -8,10 +8,22 @@ html {
   scroll-behavior: smooth;
 }
 
-body {
+/*body {
   font-family: "Raleway", sans-serif;
   background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
-}
+}*/
+
+
+h1, .h1 { font-size: 3rem; font-family: 'B612', sans-serif;}
+h2, .h2 { font-size: 2.8rem; font-family: 'B612', sans-serif;}
+h3, .h3 { font-size: 2.5rem; font-family: 'B612', sans-serif;}
+h4, .h4 { font-size: 2rem; font-family: 'B612', sans-serif;}
+h5, .h5 { font-size: 1rem; font-family: 'B612', sans-serif;}
+h6, .h6 { font-size: 1rem; font-family: 'B612', sans-serif;}
+
+
+body {font-family: 'PT Sans', sans-serif;
+font-size: 2rem;}
 
 
 /*body {
@@ -38,7 +50,7 @@ body {
 
 .navbar {
   font-size: 18px;
-  background-color: rgba(66, 149, 215, 0.6);
+  background-color: rgba(87, 77, 7, 0.8);
   /*background-image: linear-gradient(260deg, #2376ae 0%, #c16ecf 100%);*/
   /*border: 1px solid rgba(0, 0, 0, 0.2);*/
   position: fixed;
@@ -105,21 +117,34 @@ body {
   font-family: 'Josefin Slab', serif;
   font-weight: 700;
   color: black;
-  font-size: 2em;
+  font-size: 2.2em;
   position: absolute;
-  margin-left: -30px;
-  margin-right: -30px;
+  text-align: center;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 /*  background-color: rgba(255, 255, 255, 0.2);*/
 }
 
+.speciality {
+  font-family: 'Josefin Slab', serif;
+  font-weight: 700;
+  color: rgba(87, 77, 7, 0.8);
+  font-size: 1.2em;
+/*  background-color: rgba(255, 255, 255, 0.2);*/
+}
+
+
 .box-container {
-  width: 100%;
+  position: relative;
+  text-align: center;
+  max-width: 100%;
+  box-sizing: border-box;
+
+  /* width: 100%;
   border: 0px solid green;
-  padding: 5px;
-  height: 300px;
+  padding: 5px; */
+  height: 420px;
   margin: 0px;
   background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
 }
@@ -144,10 +169,6 @@ body {
   box-sizing: border-box;
 }
 
-/* Centered text */
-.text-header {
-  font-size: 1.5em;
-}
 
 .logo {
   display: inline-block;
@@ -266,7 +287,6 @@ a.anchor {
   position: relative;
   text-align: center;
   color: white;
-
 }
 
 
@@ -306,9 +326,9 @@ a.anchor {
   padding: 4rem 0;
   margin-bottom: 0;}
 .value-img {
-  width: 80px;
+  width: 60px;
   display: block;
-  text-align: center;
+  text-align: left;
   stroke-width: 1;
   margin: auto; }
 .example-grid .column,
