--- a/custom.css
+++ b/custom.css
@@ -14,16 +14,16 @@ html {
 }*/
 
 
-h1, .h1 { font-size: 3rem; font-family: 'B612', sans-serif;}
-h2, .h2 { font-size: 2.8rem; font-family: 'B612', sans-serif;}
-h3, .h3 { font-size: 2.5rem; font-family: 'B612', sans-serif;}
-h4, .h4 { font-size: 2rem; font-family: 'B612', sans-serif;}
-h5, .h5 { font-size: 1rem; font-family: 'B612', sans-serif;}
-h6, .h6 { font-size: 1rem; font-family: 'B612', sans-serif;}
+h1, .h1 { font-size: 3rem; font-family: 'Raleway', sans-serif;}
+h2, .h2 { font-size: 2.8rem; font-family: 'Raleway', sans-serif;}
+h3, .h3 { font-size: 2.5rem; font-family: 'Raleway', sans-serif;}
+h4, .h4 { font-size: 2rem; font-family: 'Raleway', sans-serif;}
+h5, .h5 { font-size: 1rem; font-family: 'Raleway', sans-serif;}
+h6, .h6 { font-size: 1rem; font-family: 'Raleway', sans-serif;}
 
 
-body {font-family: 'PT Sans', sans-serif;
-font-size: 2rem;}
+body {font-family: 'Raleway', sans-serif;
+font-size: 1.5rem;}
 
 
 /*body {
@@ -50,11 +50,11 @@ font-size: 2rem;}
 
 .navbar {
   font-size: 18px;
-  background-color: rgba(87, 77, 7, 0.8);
+  background-color: #FFFFFF90;
   /*background-image: linear-gradient(260deg, #2376ae 0%, #c16ecf 100%);*/
   /*border: 1px solid rgba(0, 0, 0, 0.2);*/
   position: fixed;
-  height: 40px;
+  height: 55px;
   z-index: 1; 
   width: 100%;
 }
@@ -67,25 +67,26 @@ font-size: 2rem;}
 .nav-links{
   font-family: 'Montserrat', serif;
   text-decoration: none;
-  color: rgba(255, 255, 255, 0.8);
-  font-weight: 700;
-  font-size: 15px;
+  color: rgba(55, 55, 55, 0.8);
+  font-weight: 600;
+  font-size: 0.8em;
 }
 
 .main-nav li {
-  text-align: center;
+  text-align: left;
   margin: 15px auto;
 }
 
 .logo {
-  font-family: 'Montserrat', serif;
+  font-family: 'Courgette', serif;
   display: inline-block;
-  color: white;
+  color: black;
   font-size: 18px;
   font-weight: 500;
   margin-top: 5px;
   margin-left: 10px;
   line-height: 85%;
+  max-width: 20rem;
 }
 
 .navbar-toggle {
@@ -94,14 +95,21 @@ font-size: 2rem;}
   right: 20px;
   cursor: pointer;
   color: rgba(255, 255, 255, 0.8);
-  font-size: 18px;
+  font-size: 10px;
 }
 
 .active {
-  margin-top: -25px;
+  margin-top: -10px;
   display: block;
-  background-color: rgba(66, 149, 215, 0.8);
+  margin-top: -25px;
+  font-size: 0.9em;
+  padding-left: 10pt;
+  padding-bottom: 5pt;
+  /* text-align: right; */
+  background-color: rgba(255, 255, 255, 0.8);
 }
+
+
 
 
 .img-header {
@@ -117,7 +125,7 @@ font-size: 2rem;}
   font-family: 'Josefin Slab', serif;
   font-weight: 700;
   color: black;
-  font-size: 2.2em;
+  font-size: 2em;
   position: absolute;
   text-align: center;
   top: 50%;
@@ -131,6 +139,15 @@ font-size: 2rem;}
   font-weight: 700;
   color: rgba(87, 77, 7, 0.8);
   font-size: 1.2em;
+/*  background-color: rgba(255, 255, 255, 0.2);*/
+}
+
+.speciality-description {
+  padding-top: 10px;
+  font-family: 'Josefin Slab', serif;
+  font-weight: 500;
+  color: rgba(87, 77, 7, 0.8);
+  font-size: 1.0em;
 /*  background-color: rgba(255, 255, 255, 0.2);*/
 }
 
@@ -155,11 +172,14 @@ font-size: 2rem;}
 
   .navbar {
   font-size: 18px;
-  height: 45px;
+  height: 55px;
 }
 
 .active {
-  margin-top: -35px;
+  margin-top: -25px;
+  font-size: 0.9em;
+  padding-left: 10pt;
+  padding-bottom: 5pt;
 }
 
   .img-header {
@@ -175,10 +195,11 @@ font-size: 2rem;}
   font-size: 16px;
   margin-top: 5px;
   margin-right: 30px;
+  max-width: 20rem;
 }
 
 .nav-links{
-  font-size: 14px;
+  font-size: 1em;
 }
 
 }
@@ -193,7 +214,7 @@ font-size: 2rem;}
     justify-content: space-between;
     padding-bottom: 0;
     padding-top: 20px;
-    height: 60px;
+    height: 70px;
     align-items: center;
     position: fixed;
     width: 100%;
@@ -217,6 +238,7 @@ font-size: 2rem;}
 .logo {
   font-size: 26px;
   margin-top: 0px;
+  max-width: 40rem;
 }
 
   .navbar-toggle {
@@ -237,7 +259,7 @@ font-size: 2rem;}
 
 /* Centered text */
 .text-header {
-  font-size: 4em;
+  font-size: 3.2em;
 }
 
 
@@ -245,15 +267,14 @@ font-size: 2rem;}
 }
 
 
-.active {
-        color: #fff !important;
-        text-decoration: underline !important;
+/* .active {
+        color: #00000090 !important;
         -webkit-transform: translate3d(0, 0, 0);
         -moz-transform: translate3d(0, 0, 0);
         -o-transform: translate3d(0, 0, 0);
         -ms-transform: translate3d(0, 0, 0);
         transform: translate3d(0, 0, 0); // hardware acceleration of CSS animation
-}
+} */
 
 
 blockquote {
@@ -328,9 +349,10 @@ a.anchor {
 .value-img {
   width: 60px;
   display: block;
-  text-align: left;
+  box-align: center;
   stroke-width: 1;
-  margin: auto; }
+  /* margin: auto;  */
+}
 .example-grid .column,
 .example-grid .columns {
   background: #EEE;
@@ -527,9 +549,9 @@ a.anchor {
     border-radius: 0 0 4px 4px;
     border-bottom-width: 0; }
   .popover-link:hover {
-    color: #fff;
-    background: #33C3F0; }
+    color: #000000;
+    background: #FFFFFF; }
   .popover-link:hover,
   .popover-item:first-child .popover-link:hover:after {
-    border-bottom-color: #33C3F0; }
+    border-bottom-color: #FFFFFF; }
 }
